--- a/views/Pantalla_1.ejs
+++ b/views/Pantalla_1.ejs
@@ -23,7 +23,7 @@
 	</div>
 
 	<div class="fixed-action-btn horizontal click-to-toggle">
-		<a class="btn-floating waves-effect waves-light btn-large " href="Pantalla_2" onclick=""><i class="large material-icons">arrow_forward</i></a>
+		<a class="btn-floating waves-effect waves-light btn-large " href="/views/Pantalla_2" onclick=""><i class="large material-icons">arrow_forward</i></a>
 	</div>
 
 
